--- a/lab1.Rmd
+++ b/lab1.Rmd
@@ -1,39 +1,119 @@
 ---
-title: "Lab 1"
-author: "Zheqi"
-date: "2023-01-13"
-output: html_document
+title: "Lab 01 - Hello R"
+author: "zheqi"
+date: "1/13/2023"
+output: github_document
 ---
 
-```{r fig.height=3, fig.width=6}
+## Load packages and data
+
+```{r load-packages, message=FALSE}
+library(tidyverse) 
+library(datasauRus)
+```
+
+## Exercises
+
+### Exercise 1
+
+A data frame with 1846 rows and 3 variables.
+
+### Exercise 2
+
+dino_data <- datasaurus_dozen %>%
++     filter(dataset == "dino")
+> ggplot(data = dino_data, mapping = aes(x = x, y = y)) +
++     geom_point()
+> dino_data %>%
++     summarize(r = cor(x, y))
+# A tibble: 1 × 1
+        r
+    <dbl>
+1 -0.0645
+> #> # A tibble: 1 × 1
+> #>         r
+> #>     <dbl>
+> #> 1 -0.0645
+First let's plot the data in the dino dataset:
+
+```{r plot-dino, fig.height=3, fig.width=6}
+dino_data <- datasaurus_dozen %>%
+  filter(dataset == "dino")
+ggplot(data = dino_data, mapping = aes(x = x, y = y)) +
+  geom_point()
+dino_data %>%
+  summarize(r = cor(x, y))
+```
+
+### Exercise 3
+
+ star_data <- datasaurus_dozen %>%
++     filter(dataset == "star")
+> ggplot(data=star_data, mapping = aes(x = x, y = y))+
++     geom_point()
+> star_data %>%
++     summarize(r = cor(x, y))
+# A tibble: 1 × 1
+        r
+    <dbl>
+1 -0.0630
+```{r plot-star, fig.height=3, fig.width=6}
+star_data <- datasaurus_dozen %>%
+   filter(dataset == "star")
+ggplot(data=star_data, mapping = aes(x = x, y = y))+
+   geom_point()
+
+star_data %>%
+  summarize(r = cor(x, y))
+```
+### Exercise 4
+
+circle_data <- datasaurus_dozen %>%
++     filter(dataset == "circle")
+> ggplot(data = circle_data, mapping = aes(x = x, y = y)) +
++     geom_point()
+> circle_data %>%
++     summarize(r = cor(x,y))
+# A tibble: 1 × 1
+        r
+    <dbl>
+1 -0.0683
+```{r plot-circle, fig.height=3, fig.width=6}
+circle_data <- datasaurus_dozen %>%
+   filter(dataset == "circle")
+ggplot(data=circle_data, mapping = aes(x = x, y = y))+
+   geom_point()
+circle_data %>%
+  summarize(r = cor(x, y))
+```
+
+
+### Exercise 5
+
+```{r plot-all, fig.height=6, fig.width=3}
 ggplot(datasaurus_dozen, aes(x = x, y = y, color = dataset))+
-+     geom_point()+
-+     facet_wrap(~ dataset, ncol = 3) +
-+     theme(legend.position = "none")
+   geom_point()+
+   facet_wrap(~ dataset, ncol = 3) +
+   theme(legend.position = "none")
 datasaurus_dozen %>%
-+     group_by(dataset) %>%
-+     summarize(r = cor(x, y)) %>%
-+     print(13)
-# A tibble:
-#   13 × 2
-   dataset     
-away      
-bullseye  
-circle    
-dino      
-dots      
-h_lines   
-high_lines
-slant_down
-slant_up  
-star      
-v_lines   
-wide_lines
-x_shape   
-# … with 1
-#   more
-#   variable:
-#   r <dbl>
-# ℹ Use `colnames()` to see all variable names
+   group_by(dataset) %>%
+   summarize(r = cor(x, y)) %>%
+   print(13)
 knitr::opts_chunk$set(echo = TRUE)
 ```
+
+
+
+## Bonus Tips by Yoo Ri
+
+Here are some helpful tips :) 
+
+* filter() is for extracting rows
+
+* group_by() is for grouping datasets by assigned column 
+* ungroup() cancels the grouping 
+
+* summarize()  is often used with group_by(). This function can print the output according to the group_by().
+
+* facet_grid(y~x,...) creates a grid with variable y as a row, variable x as a column  
+* facet_wrap(x,... ) is useful when there is only one variable
